--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
+    "react-breadcrumbs-dynamic": "^1.2.1",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-scripts": "5.0.1",
